# too-many-portals

./: .gitignore  README.md  beet.json  pyproject.toml
customportals/: __init__.py  console.py  dimensions.py  global_.py  options.py  portals.py  textures.py  utils.py  validation.py
customportals/data/customportals/advancements/: place_fire.json  place_lava.json  place_water.json
customportals/data/customportals/functions/: exit_portal.mcfunction  in_portal.mcfunction  load.mcfunction  portal_floor.mcfunction  portal_x.mcfunction  portal_z.mcfunction  revoke_trigger.mcfunction  slowtick.mcfunction  summon_markers.mcfunction  tick.mcfunction  uninstall.mcfunction
customportals/data/customportals/predicates/: affectable.json
customportals/per_portal/functions/default/: update.mcfunction
customportals/per_portal/functions/floor/: update.mcfunction
too_many_portals/: __init__.py  dimensions.py  global_.py  portals.py  validation.py
too_many_portals/data/too_many_portals/advancements/: place_fire.json  place_lava.json  place_water.json
too_many_portals/data/too_many_portals/functions/: exit_portal.mcfunction  in_portal.mcfunction  load.mcfunction  portal_floor.mcfunction  portal_x.mcfunction  portal_z.mcfunction  revoke_trigger.mcfunction  slowtick.mcfunction  summon_markers.mcfunction  tick.mcfunction  uninstall.mcfunction
too_many_portals/data/too_many_portals/predicates/: affectable.json
too_many_portals/per_portal/functions/default/: update.mcfunction
too_many_portals/per_portal/functions/floor/: update.mcfunction
(+257 files in other folders)
